starting replication (broken)

--- a/notebooks/eda.ipynb
+++ b/notebooks/eda.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -131,7 +131,7 @@
        "4                  True  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -368,13 +368,173 @@
        "[5 rows x 25 columns]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df_pub.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_c_short = df_cit[(df_cit['is_citedpaperid_acl'] == True) & (df_cit['is_citingpaperid_acl'] == True)].head(100)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "matched_abstracts = df_c_short = df_c_short[['citingpaperid', 'citedpaperid']].merge(\n",
+    "    df_pub[['corpus_paper_id', 'abstract']].rename(columns={'abstract': 'citing_abstract'}),\n",
+    "    left_on=\"citingpaperid\", right_on=\"corpus_paper_id\", how='left'\n",
+    ").merge(\n",
+    "    df_pub[['corpus_paper_id', 'abstract']].rename(columns={'abstract': 'cited_abstract'}),\n",
+    "    left_on=\"citedpaperid\", right_on=\"corpus_paper_id\", how='left'\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>citingpaperid</th>\n",
+       "      <th>citedpaperid</th>\n",
+       "      <th>corpus_paper_id_x</th>\n",
+       "      <th>citing_abstract</th>\n",
+       "      <th>corpus_paper_id_y</th>\n",
+       "      <th>cited_abstract</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>233365331</td>\n",
+       "      <td>218974137</td>\n",
+       "      <td>233365331</td>\n",
+       "      <td>In this work we compare the performance of con...</td>\n",
+       "      <td>218974137</td>\n",
+       "      <td>There is an increasing demand for sentiment an...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>3841628</td>\n",
+       "      <td>18998986</td>\n",
+       "      <td>3841628</td>\n",
+       "      <td>Election manifestos document the intentions, m...</td>\n",
+       "      <td>18998986</td>\n",
+       "      <td>In recent years, keyphrase extraction has rece...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>218974058</td>\n",
+       "      <td>204896994</td>\n",
+       "      <td>218974058</td>\n",
+       "      <td>In this paper we describe our work on the deve...</td>\n",
+       "      <td>204896994</td>\n",
+       "      <td>In order to automatically extend a treebank of...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>53242563</td>\n",
+       "      <td>15453873</td>\n",
+       "      <td>53242563</td>\n",
+       "      <td>We posed the shared task of assigning sentence...</td>\n",
+       "      <td>15453873</td>\n",
+       "      <td>This paper presents the current status of OPUS...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1009868</td>\n",
+       "      <td>680757</td>\n",
+       "      <td>1009868</td>\n",
+       "      <td>We present the results of the WMT13 shared tas...</td>\n",
+       "      <td>680757</td>\n",
+       "      <td>We illustrate and explain problems of n-grams-...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   citingpaperid  citedpaperid  corpus_paper_id_x  \\\n",
+       "0      233365331     218974137          233365331   \n",
+       "1        3841628      18998986            3841628   \n",
+       "2      218974058     204896994          218974058   \n",
+       "3       53242563      15453873           53242563   \n",
+       "4        1009868        680757            1009868   \n",
+       "\n",
+       "                                     citing_abstract  corpus_paper_id_y  \\\n",
+       "0  In this work we compare the performance of con...          218974137   \n",
+       "1  Election manifestos document the intentions, m...           18998986   \n",
+       "2  In this paper we describe our work on the deve...          204896994   \n",
+       "3  We posed the shared task of assigning sentence...           15453873   \n",
+       "4  We present the results of the WMT13 shared tas...             680757   \n",
+       "\n",
+       "                                      cited_abstract  \n",
+       "0  There is an increasing demand for sentiment an...  \n",
+       "1  In recent years, keyphrase extraction has rece...  \n",
+       "2  In order to automatically extend a treebank of...  \n",
+       "3  This paper presents the current status of OPUS...  \n",
+       "4  We illustrate and explain problems of n-grams-...  "
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "matched_abstracts.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "100"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(matched_abstracts)"
    ]
   },
   {
