organization and contributing guidelines

--- a/notebooks/eda.ipynb
+++ b/notebooks/eda.ipynb
@@ -379,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -412,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -511,7 +511,7 @@
        "4  We illustrate and explain problems of n-grams-...      1  "
       ]
      },
-     "execution_count": 24,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -525,7 +525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -534,7 +534,7 @@
        "100"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -545,7 +545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -597,7 +597,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -704,7 +704,7 @@
        "4  We illustrate and explain problems of n-grams-...      1  "
       ]
      },
-     "execution_count": 29,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -716,7 +716,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -751,41 +751,41 @@
        "    <tr>\n",
        "      <th>195</th>\n",
        "      <td>236771976</td>\n",
-       "      <td>128010999</td>\n",
+       "      <td>198876308</td>\n",
        "      <td>Multihop reasoning remains an elusive goal as ...</td>\n",
-       "      <td>We present a constituency parsing algorithm th...</td>\n",
+       "      <td>We present a system for the task of morphologi...</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>196</th>\n",
        "      <td>237157879</td>\n",
-       "      <td>244077698</td>\n",
+       "      <td>616564</td>\n",
        "      <td>Nowadays, most research conducted in the field...</td>\n",
-       "      <td>None</td>\n",
+       "      <td>Many research efforts have been devoted to dev...</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>197</th>\n",
        "      <td>237502863</td>\n",
-       "      <td>7075290</td>\n",
+       "      <td>18021631</td>\n",
        "      <td>Non-autoregressive neural machine translation ...</td>\n",
-       "      <td>Incorrect normalization of text can be particu...</td>\n",
+       "      <td>In this paper, we introduce TimeBankPT, a Time...</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>198</th>\n",
        "      <td>243865639</td>\n",
-       "      <td>8178879</td>\n",
+       "      <td>1664456</td>\n",
        "      <td>Event time is one of the most important featur...</td>\n",
-       "      <td>We describe here the principles underlying the...</td>\n",
+       "      <td>This paper focuses on exploiting different mod...</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>199</th>\n",
        "      <td>243865646</td>\n",
-       "      <td>11770707</td>\n",
+       "      <td>12877573</td>\n",
        "      <td>In this paper, we investigate the Aspect Categ...</td>\n",
-       "      <td>Users of Statistical Machine Translation (SMT)...</td>\n",
+       "      <td>In this paper we describe SoMaJo, a rulebased ...</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -794,11 +794,11 @@
       ],
       "text/plain": [
        "     citingpaperid  citedpaperid  \\\n",
-       "195      236771976     128010999   \n",
-       "196      237157879     244077698   \n",
-       "197      237502863       7075290   \n",
-       "198      243865639       8178879   \n",
-       "199      243865646      11770707   \n",
+       "195      236771976     198876308   \n",
+       "196      237157879        616564   \n",
+       "197      237502863      18021631   \n",
+       "198      243865639       1664456   \n",
+       "199      243865646      12877573   \n",
        "\n",
        "                                       citing_abstract  \\\n",
        "195  Multihop reasoning remains an elusive goal as ...   \n",
@@ -808,14 +808,14 @@
        "199  In this paper, we investigate the Aspect Categ...   \n",
        "\n",
        "                                        cited_abstract  label  \n",
-       "195  We present a constituency parsing algorithm th...      0  \n",
-       "196                                               None      0  \n",
-       "197  Incorrect normalization of text can be particu...      0  \n",
-       "198  We describe here the principles underlying the...      0  \n",
-       "199  Users of Statistical Machine Translation (SMT)...      0  "
+       "195  We present a system for the task of morphologi...      0  \n",
+       "196  Many research efforts have been devoted to dev...      0  \n",
+       "197  In this paper, we introduce TimeBankPT, a Time...      0  \n",
+       "198  This paper focuses on exploiting different mod...      0  \n",
+       "199  In this paper we describe SoMaJo, a rulebased ...      0  "
       ]
      },
-     "execution_count": 30,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -833,7 +833,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -841,7 +841,7 @@
      "output_type": "stream",
      "text": [
       "Number of positive examples: 1339442\n",
-      "Number of negative examples: 1339505\n"
+      "Number of negative examples: 1339509\n"
      ]
     }
    ],
@@ -852,7 +852,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -951,7 +951,7 @@
        "4  We illustrate and explain problems of n-grams-...      1  "
       ]
      },
-     "execution_count": 32,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -962,7 +962,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -995,43 +995,43 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>2678942</th>\n",
-       "      <td>248525217</td>\n",
-       "      <td>2940881</td>\n",
-       "      <td>Canonical automatic summary evaluation metrics...</td>\n",
-       "      <td>A major challenge in statistical machine trans...</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2678943</th>\n",
-       "      <td>248525217</td>\n",
-       "      <td>309731</td>\n",
-       "      <td>Canonical automatic summary evaluation metrics...</td>\n",
-       "      <td>We propose a novel model to automatically extr...</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2678944</th>\n",
-       "      <td>248525217</td>\n",
-       "      <td>29287141</td>\n",
-       "      <td>Canonical automatic summary evaluation metrics...</td>\n",
-       "      <td>Although there are many tools for natural lang...</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2678945</th>\n",
-       "      <td>248525217</td>\n",
-       "      <td>208004056</td>\n",
-       "      <td>Canonical automatic summary evaluation metrics...</td>\n",
-       "      <td>The paper considers the problems in transferri...</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>2678946</th>\n",
        "      <td>248525217</td>\n",
-       "      <td>748386</td>\n",
+       "      <td>14387118</td>\n",
        "      <td>Canonical automatic summary evaluation metrics...</td>\n",
-       "      <td>This paper describes first results using the U...</td>\n",
+       "      <td>In this paper we address the issue of developi...</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2678947</th>\n",
+       "      <td>248525217</td>\n",
+       "      <td>14926846</td>\n",
+       "      <td>Canonical automatic summary evaluation metrics...</td>\n",
+       "      <td>This paper presents a simple but effective app...</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2678948</th>\n",
+       "      <td>248525217</td>\n",
+       "      <td>122829</td>\n",
+       "      <td>Canonical automatic summary evaluation metrics...</td>\n",
+       "      <td>We present a neural model for morphological in...</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2678949</th>\n",
+       "      <td>248525217</td>\n",
+       "      <td>62483340</td>\n",
+       "      <td>Canonical automatic summary evaluation metrics...</td>\n",
+       "      <td>None</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2678950</th>\n",
+       "      <td>248525217</td>\n",
+       "      <td>241583646</td>\n",
+       "      <td>Canonical automatic summary evaluation metrics...</td>\n",
+       "      <td>With the essays part from The International Co...</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -1040,28 +1040,28 @@
       ],
       "text/plain": [
        "         citingpaperid  citedpaperid  \\\n",
-       "2678942      248525217       2940881   \n",
-       "2678943      248525217        309731   \n",
-       "2678944      248525217      29287141   \n",
-       "2678945      248525217     208004056   \n",
-       "2678946      248525217        748386   \n",
+       "2678946      248525217      14387118   \n",
+       "2678947      248525217      14926846   \n",
+       "2678948      248525217        122829   \n",
+       "2678949      248525217      62483340   \n",
+       "2678950      248525217     241583646   \n",
        "\n",
        "                                           citing_abstract  \\\n",
-       "2678942  Canonical automatic summary evaluation metrics...   \n",
-       "2678943  Canonical automatic summary evaluation metrics...   \n",
-       "2678944  Canonical automatic summary evaluation metrics...   \n",
-       "2678945  Canonical automatic summary evaluation metrics...   \n",
        "2678946  Canonical automatic summary evaluation metrics...   \n",
+       "2678947  Canonical automatic summary evaluation metrics...   \n",
+       "2678948  Canonical automatic summary evaluation metrics...   \n",
+       "2678949  Canonical automatic summary evaluation metrics...   \n",
+       "2678950  Canonical automatic summary evaluation metrics...   \n",
        "\n",
        "                                            cited_abstract  label  \n",
-       "2678942  A major challenge in statistical machine trans...      0  \n",
-       "2678943  We propose a novel model to automatically extr...      0  \n",
-       "2678944  Although there are many tools for natural lang...      0  \n",
-       "2678945  The paper considers the problems in transferri...      0  \n",
-       "2678946  This paper describes first results using the U...      0  "
+       "2678946  In this paper we address the issue of developi...      0  \n",
+       "2678947  This paper presents a simple but effective app...      0  \n",
+       "2678948  We present a neural model for morphological in...      0  \n",
+       "2678949                                               None      0  \n",
+       "2678950  With the essays part from The International Co...      0  "
       ]
      },
-     "execution_count": 33,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
