--- a/notebooks/eda.ipynb
+++ b/notebooks/eda.ipynb
@@ -20,19 +20,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "TOP_DIR = os.path.dirname(os.path.dirname(os.path.abspath(\"__file__\")))"
+    "CAUSALIGN_DIR = os.path.dirname(os.path.dirname(os.path.abspath(\"__file__\")))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "TOP_DIR = CAUSALIGN_DIR\n",
     "df_cit = pd.read_parquet(os.path.join(TOP_DIR, 'data', 'acl_full_citations.parquet'))\n",
     "df_pub = pd.read_parquet(os.path.join(TOP_DIR, 'data', 'acl-publication-info.74k.v2.parquet'))"
    ]
