f/riesz-causalsent-training

--- a/notebooks/eda.ipynb
+++ b/notebooks/eda.ipynb
@@ -24,7 +24,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "CAUSALIGN_DIR = os.path.dirname(os.path.dirname(os.path.abspath(\"__file__\")))"
+    "CAUSALIGN_DIR = os.path.dirname(os.path.dirname(os.path.abspath(\"__file__\")))\n",
+    "ACL_DATA_DIR = 'acl_data'"
    ]
   },
   {
@@ -34,8 +35,8 @@
    "outputs": [],
    "source": [
     "TOP_DIR = CAUSALIGN_DIR\n",
-    "df_cit = pd.read_parquet(os.path.join(TOP_DIR, 'data', 'acl_full_citations.parquet'))\n",
-    "df_pub = pd.read_parquet(os.path.join(TOP_DIR, 'data', 'acl-publication-info.74k.v2.parquet'))"
+    "df_cit = pd.read_parquet(os.path.join(TOP_DIR, ACL_DATA_DIR, 'acl_full_citations.parquet'))\n",
+    "df_pub = pd.read_parquet(os.path.join(TOP_DIR, ACL_DATA_DIR, 'acl-publication-info.74k.v2.parquet'))"
    ]
   },
   {
