SQLite exp tracking, iterative unfreezing, llama backbone, head types

--- a/notebooks/sentiment.ipynb
+++ b/notebooks/sentiment.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -23,11 +23,11 @@
     "if TOP_DIR not in sys.path:\n",
     "    sys.path.insert(0, TOP_DIR)\n",
     "from causalign.constants import CAUSALIGN_DIR, CITING_ID_COL, CITED_ID_COL, NEGATIVE_ID_COL, CORPUS_ID_COL\n",
-    "from causalign.data.utils import load_imdb_data, load_civil_commments_data\n",
+    "from causalign.data.utils import load_imdb_data, load_civil_comments_data\n",
     "from causalign.data.generators import IMDBDataset, CivilCommentsDataset\n",
     "from tqdm.auto import tqdm\n",
     "import matplotlib.pyplot as plt\n",
-    "from causalign.utils import save_model, get_default_training_args, seed_everything\n",
+    "from causalign.utils import save_model, get_default_sent_training_args, seed_everything\n",
     "from pprint import pprint\n",
     "seed_everything(328)"
    ]
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -68,7 +68,7 @@
     "    #'--running_ate',\n",
     "    #'--estimate_targets_for_ate',\n",
     "]\n",
-    "args = get_default_training_args(regime = 'base_sent')"
+    "args = get_default_sent_training_args(regime = 'causal_sent')"
    ]
   },
   {
@@ -80,75 +80,118 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "imdb_train_original = load_imdb_data(split = \"train\")\n",
+    "imdb_train_splits = imdb_train_original.train_test_split(test_size=0.2)\n",
+    "imdb_train = imdb_train_splits[\"train\"]\n",
+    "imdb_val = imdb_train_splits[\"test\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Normally I try to avoid Sci-Fi movies as much as I can, because this just isn\\'t a genre that really appeals to me. Light sabers, UFO\\'s, aliens, time traveling... most of the time it\\'s nothing for me. However, there is one movie in the genre that I\\'ll always give a place in my list of top movies and that\\'s this \"Twelve Monkeys\" I remember to be completely blown away by it the first time, but even now, after having it seen several times already, I\\'m still one of its biggest fans. Every time I see it, this movie seems to get better and better.<br /><br />Somewhere in the distant future all people live underground because an unknown and lethal virus wiped out five billion people in 1996, leaving only 1 percent of the population alive. James Cole is one of them. He\\'s a prisoner who lives in a small cage and who is chosen as a \\'volunteer\\' to be sent back to in time to gather information about the origin of the epidemic. They believe it was spread by a mysterious group called \\'The Twelve Monkeys\\' and need the virus before it mutated, so that scientists can study it. But their time traveling machine doesn\\'t work perfectly yet and he is accidentally sent to 1990, where he meets Dr. Kathryn Railly, a psychiatrist, and Jeffrey Goines, the insane son of a famous scientist and virus expert...<br /><br />What I like so much about this movie is the fact that it is never clear whether all what you are seeing is real or not. Is this just an illusion, created in the mind of a mentally ill man or is it real? Does he really come from the future and can he really travel through time? Was the population really wiped out by a virus, released by the army of The Twelve Monkeys? Those are all questions that will leave you wondering from the beginning until the end. If the makers of this movie had chosen to make it all more obvious, I\\'m sure that I would never have liked it as much as I did now. It\\'s just that mysteriousness that keeps me interested time after time. But that\\'s not the only good thing about this movie of course. The acting is amazing too. Normally I\\'m not too much a fan of Bruce Willis, but what he did in this movie was just astonishing. Together with Madeleine Stowe and Brad Pitt he should have won several awards for it, because together with the amazing story, they made this movie work so incredibly well.<br /><br />Even after several viewings, I\\'m still a huge fan of this movie. Except for this movie, I have only seen one other Terry Gilliam movie and that\\'s \"Fear and Loathing in Las Vegas\", which wasn\\'t bad, but didn\\'t really convince me either. However, it\\'s this movie that really makes me look forward to his other work. I give it a 9/10, maybe even a 9.5/10.',\n",
+       " 'I recently found a copy for $5 at a video store, and snapped it up eagerly. While the music and (obviously) graphics aren\\'t up to the standards of my favorite of the series, Beyond the Mind\\'s Eye, I am still entranced by one segment:<br /><br />Stanley and Stella in \"Breaking the Ice\". The music is brilliant, and the emotions feel real. The clip on Odyssey\\'s website doesn\\'t have the story nor the music, unfortunately.']"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "imdb_train['text'][0:2]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len([x for x in imdb_train['text'] if not x])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['I rented I AM CURIOUS-YELLOW from my video store because of all the controversy that surrounded it when it was first released in 1967. I also heard that at first it was seized by U.S. customs if it ever tried to enter this country, therefore being a fan of films considered \"controversial\" I really had to see this for myself.<br /><br />The plot is centered around a young Swedish drama student named Lena who wants to learn everything she can about life. In particular she wants to focus her attentions to making some sort of documentary on what the average Swede thought about certain political issues such as the Vietnam War and race issues in the United States. In between asking politicians and ordinary denizens of Stockholm about their opinions on politics, she has sex with her drama teacher, classmates, and married men.<br /><br />What kills me about I AM CURIOUS-YELLOW is that 40 years ago, this was considered pornographic. Really, the sex and nudity scenes are few and far between, even then it\\'s not shot like some cheaply made porno. While my countrymen mind find it shocking, in reality sex and nudity are a major staple in Swedish cinema. Even Ingmar Bergman, arguably their answer to good old boy John Ford, had sex scenes in his films.<br /><br />I do commend the filmmakers for the fact that any sex shown in the film is shown for artistic purposes rather than just to shock people and make money to be shown in pornographic theaters in America. I AM CURIOUS-YELLOW is a good film for anyone wanting to study the meat and potatoes (no pun intended) of Swedish cinema. But really, this film doesn\\'t have much of a plot.',\n",
+       " '\"I Am Curious: Yellow\" is a risible and pretentious steaming pile. It doesn\\'t matter what one\\'s political views are because this film can hardly be taken seriously on any level. As for the claim that frontal male nudity is an automatic NC-17, that isn\\'t true. I\\'ve seen R-rated films with male nudity. Granted, they only offer some fleeting views, but where are the R-rated films with gaping vulvas and flapping labia? Nowhere, because they don\\'t exist. The same goes for those crappy cable shows: schlongs swinging in the breeze but not a clitoris in sight. And those pretentious indie movies like The Brown Bunny, in which we\\'re treated to the site of Vincent Gallo\\'s throbbing johnson, but not a trace of pink visible on Chloe Sevigny. Before crying (or implying) \"double-standard\" in matters of nudity, the mentally obtuse should take into account one unavoidably obvious anatomical difference between men and women: there are no genitals on display when actresses appears nude, and the same cannot be said for a man. In fact, you generally won\\'t see female genitals in an American film in anything short of porn or explicit erotica. This alleged double-standard is less a double standard than an admittedly depressing ability to come to terms culturally with the insides of women\\'s bodies.']"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "imdb_train_original['text'][0:2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Limiting data to 500 rows.\n",
-      "Creating treated and control counterfactuals...\n",
-      "Tokenizing texts for real, treated, and control counterfactuals...\n",
-      "Truncating texts during tokenization to length: 150\n"
+      "<class 'datasets.arrow_dataset.Dataset'>\n",
+      "Dataset({\n",
+      "    features: ['text', 'label'],\n",
+      "    num_rows: 20000\n",
+      "})\n",
+      "Limiting data to 500 rows.\n"
      ]
     },
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Tokenizing texts: 100%|██████████| 500/500 [00:00<00:00, 464588.39it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Truncating texts during tokenization to length: 150\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Tokenizing texts: 100%|██████████| 500/500 [00:00<00:00, 599528.87it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Truncating texts during tokenization to length: 150\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Tokenizing texts: 100%|██████████| 500/500 [00:00<00:00, 496955.45it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Limiting data to 500 rows.\n",
-      "Tokenizing texts for real, treated, and control counterfactuals...\n",
-      "Truncating texts during tokenization to length: 150\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Tokenizing texts: 100%|██████████| 500/500 [00:00<00:00, 662397.98it/s]\n"
+     "ename": "ValueError",
+     "evalue": "Model sentence-transformers/msmarco-distilbert-base-v4 not supported. Tokenizer could not be initialized.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[8], line 10\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;28mtype\u001b[39m(imdb_train))\n\u001b[1;32m      8\u001b[0m \u001b[38;5;28mprint\u001b[39m(imdb_train)\n\u001b[0;32m---> 10\u001b[0m imdb_ds_train: IMDBDataset \u001b[38;5;241m=\u001b[39m \u001b[43mIMDBDataset\u001b[49m\u001b[43m(\u001b[49m\u001b[43mimdb_train\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\n\u001b[1;32m     11\u001b[0m \u001b[43m                                \u001b[49m\u001b[43msplit\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mtrain\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[1;32m     12\u001b[0m \u001b[43m                                \u001b[49m\u001b[43margs\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43margs\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     13\u001b[0m imdb_ds_val: IMDBDataset \u001b[38;5;241m=\u001b[39m IMDBDataset(imdb_val,\n\u001b[1;32m     14\u001b[0m                                     split \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mvalidation\u001b[39m\u001b[38;5;124m\"\u001b[39m, \n\u001b[1;32m     15\u001b[0m                                     args \u001b[38;5;241m=\u001b[39m args)\n\u001b[1;32m     16\u001b[0m ds_train \u001b[38;5;241m=\u001b[39m imdb_ds_train\n",
+      "File \u001b[0;32m~/Desktop/causalign/causalign/data/generators.py:279\u001b[0m, in \u001b[0;36mIMDBDataset.__init__\u001b[0;34m(self, dataset, split, args)\u001b[0m\n\u001b[1;32m    275\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21m__init__\u001b[39m(\u001b[38;5;28mself\u001b[39m, \n\u001b[1;32m    276\u001b[0m             dataset: Dataset, \n\u001b[1;32m    277\u001b[0m             split: \u001b[38;5;28mstr\u001b[39m, \n\u001b[1;32m    278\u001b[0m             args):\n\u001b[0;32m--> 279\u001b[0m     \u001b[38;5;28;43msuper\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[38;5;21;43m__init__\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mdataset\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43msplit\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtext_col\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mtext\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mlabel_col\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mlabel\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m~/Desktop/causalign/causalign/data/generators.py:118\u001b[0m, in \u001b[0;36mSimilarityDataset.__init__\u001b[0;34m(self, dataset, split, args, text_col, label_col)\u001b[0m\n\u001b[1;32m    116\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mtokenizer \u001b[38;5;241m=\u001b[39m DistilBertTokenizer\u001b[38;5;241m.\u001b[39mfrom_pretrained(args\u001b[38;5;241m.\u001b[39mpretrained_model_name, token \u001b[38;5;241m=\u001b[39m HF_TOKEN)\n\u001b[1;32m    117\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m--> 118\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mModel \u001b[39m\u001b[38;5;132;01m{\u001b[39;00margs\u001b[38;5;241m.\u001b[39mpretrained_model_name\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m not supported. Tokenizer could not be initialized.\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m    121\u001b[0m \u001b[38;5;66;03m# ======== Create treated and control counterfactuals for each example ========\u001b[39;00m\n\u001b[1;32m    122\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mtreat_if_untreated\u001b[39m(\n\u001b[1;32m    123\u001b[0m         text: \u001b[38;5;28mstr\u001b[39m, \n\u001b[1;32m    124\u001b[0m         treatment_phrase: \u001b[38;5;28mstr\u001b[39m, \n\u001b[1;32m    125\u001b[0m         append_where: \u001b[38;5;28mstr\u001b[39m \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mstart\u001b[39m\u001b[38;5;124m'\u001b[39m, \n\u001b[1;32m    126\u001b[0m         ignore_case: \u001b[38;5;28mbool\u001b[39m \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mTrue\u001b[39;00m):\n",
+      "\u001b[0;31mValueError\u001b[0m: Model sentence-transformers/msmarco-distilbert-base-v4 not supported. Tokenizer could not be initialized."
      ]
     }
    ],
    "source": [
     "if args.dataset == \"imdb\":\n",
-    "    imdb_train = load_imdb_data(split = \"train\")\n",
-    "    imdb_val = load_imdb_data(split = \"test\")\n",
+    "    imdb_train_original = load_imdb_data(split = \"train\")\n",
+    "    imdb_train_splits = imdb_train_original.train_test_split(test_size=0.2)\n",
+    "    imdb_train = imdb_train_splits[\"train\"]\n",
+    "    imdb_val = imdb_train_splits[\"test\"]\n",
+    "    \n",
+    "    print(type(imdb_train))\n",
+    "    print(imdb_train)\n",
     "\n",
     "    imdb_ds_train: IMDBDataset = IMDBDataset(imdb_train, \n",
     "                                    split=\"train\",\n",
@@ -159,8 +202,8 @@
     "    ds_train = imdb_ds_train\n",
     "    ds_val = imdb_ds_val\n",
     "else: \n",
-    "    civil_train = load_civil_commments_data(split = \"train\")\n",
-    "    civil_val = load_civil_commments_data(split = \"test\")\n",
+    "    civil_train = load_civil_comments_data(split = \"train\")\n",
+    "    civil_val = load_civil_comments_data(split = \"test\")\n",
     "    \n",
     "    civil_ds_train: CivilCommentsDataset = CivilCommentsDataset(civil_train, \n",
     "                                                split=\"train\",\n",
@@ -174,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
